--- a/desktop.css
+++ b/desktop.css
@@ -1,11 +1,14 @@
-    .container {
-        display: grid;
-        grid-template-columns: 670fr 1270fr;
-        aspect-ratio: 1940/1050;
-        overflow: hidden;
-    }
+.container {
+    display: grid;
+    grid-template-columns: 670rem 1270rem;
+    aspect-ratio: 1940/1050;
+    overflow: hidden;
+    background-color: #fff;
+}
 
 .container .container-left {
+    width: 670rem;
+    height: 1050rem;
     padding: 60rem 48rem 0;
 }
 
@@ -15,20 +18,27 @@
 
 .container .container-left .mid-content .select-building {
     align-items: center;
+    padding: 12rem 0;
 }
 
-.container .container-left .mid-content .select-building .separation{
+.container .container-left .mid-content .select-building .icon-tower {
+    width: 36rem;
+    height: 36rem;
+}
+
+.container .container-left .mid-content .select-building .separation {
     width: 1rem;
     height: 36rem;
     background-color: #3b3b3b;
     opacity: 41.7%;
 }
-  
+
 .container .container-left .main-content .the-tower {
-    margin-right: 48px;
+    margin-right: 48rem;
     width: 334rem;
     height: 588rem;
-    box-shadow: 5rem 5rem 5rem 0rem rgba(0, 0, 0, 0.2); /* 20% opacity */
+    box-shadow: 5rem 5rem 5rem 0rem rgba(0, 0, 0, 0.2);
+    /* 20% opacity */
 
 }
 
@@ -46,12 +56,16 @@
 }
 
 .container .container-left .main-content .select-floor {
-    
+
     color: #000;
     gap: 24rem;
     flex-wrap: wrap;
     width: 192rem;
-    padding: 18px 0;
+    padding: 18rem 0;
+}
+
+.mid-content .sup-main-mb {
+    display: none;
 }
 
 .container .container-left .main-content .select-floor .floor1 {
@@ -61,7 +75,7 @@
 
 .container .container-left .main-content .title-select {
     position: absolute;
-    padding: 0 12px;
+    padding: 0 12rem;
     background-color: #fff;
     color: #3b3b3b;
     top: 25rem;
@@ -72,7 +86,7 @@
     justify-content: space-between;
 }
 
-.container .container-left .footer .image{
+.container .container-left .footer .image {
     width: 168rem;
     height: 48rem;
 }
@@ -85,8 +99,7 @@
     aspect-ratio: 1270 / 1050;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center ;
-    
+    background-position: center;
 }
 
 .container .container-right .list-room {
@@ -113,8 +126,8 @@
     left: 0;
 }
 
-.container .container-right .select-room{
-    padding-left: 24px;
+.container .container-right .select-room {
+    padding-left: 24rem;
     align-items: center;
     height: 258rem;
     position: absolute;
@@ -127,7 +140,7 @@
 }
 
 .container .container-right .select-room .room .content {
-    margin-top: 4px;
+    margin-top: 4rem;
     flex-direction: column;
     align-items: flex-end;
 }
