--- a/mobile.css
+++ b/mobile.css
@@ -1,41 +1,4 @@
 @media (max-width: 481px) {
-    .mt_mb_24 {
-        margin-top: 24rem;
-    }
-
-    .mt_mb_12 {
-        margin-top: 12rem;
-    }
-
-    .mr_mb_36 {
-        margin-right: 36rem;
-    }
-
-    .mr_mb_24 {
-        margin-right: 24rem;
-    }
-
-    .mr_mb_12 {
-        margin-right: 12rem;
-    }
-
-    .pt_pb_mb_12 {
-        padding: 12rem 0;
-    }
-
-    .fs_12 {
-        font-size: 12rem;
-    }
-
-    .hidden_mb {
-        display: none;
-    }
-
-    .floor {
-        width: 36rem;
-        height: 36rem;
-        line-height: 36rem;
-    }
 
     .container {
         grid-template-columns: 384fr 96fr;
@@ -97,12 +60,17 @@
         gap: 30rem;
     }
 
+    .container .container-left .sup-main-mb .sup-select-floor .floor1 {
+        background-color: #000;
+        color: #fff;
+    }
+
     .container .container-left .sup-main-mb .title-select {
         position: absolute;
         padding: 0 11rem;
         background-color: #fff;
         color: #3b3b3b;
-        top: -6rem;
+        top: -7rem;
     }
 
     .container .container-left .footer {
@@ -112,5 +80,4 @@
     .container .container-right .select-room {
         height: 274.66rem;
     }
-
 }
